--- a/lab_8/public/index.html
+++ b/lab_8/public/index.html
@@ -27,7 +27,7 @@
         .then(codes => {
           var string = "";
           for (i in codes.course_id) {
-            string += '<li>'+codes.course_id[i]+'</li>';
+            string += '<li>'+codes.course_list[i]+'</li>';
           }
           document.querySelector(".content").innerHTML = '<ol>'+string+'</ol>';
           return codes;
